--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "ext-iconv": "*",
         "backup-manager/symfony": "^2.2",
         "easycorp/easyadmin-bundle": "^2.3",
-        "friendsofsymfony/ckeditor-bundle": "^2.1",
+        "friendsofsymfony/ckeditor-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
@@ -85,7 +85,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "4.3.*"
         }
     }
