--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -9,7 +9,7 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
-
+        gc_maxlifetime: 7200
     #esi: true
     #fragments: true
     php_errors:
