--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DATABASE_URL=mysql://root:bacv78@127.0.0.1:3306/bacv
 # use this to configure a traditional SMTP server
 # MAILER_URL=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&password=
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://nonokeeper:motdepasseGoogle@localhost
+MAILER_URL=smtp://mail.bacv78.fr:465?encryption=ssl&auth_mode=login&username=arnaud.coste@bacv78.fr&password=Sc]IeDaAKstP
 #MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 ### Saison en cours (ex : 1 <=> 2019-2020, 2 <=> 2020-2021 etc...)
